Fixing mobile parallax issue on index. Different spacings for gig content, background image cover for index image on small screen

--- a/src/less/gigs.less
+++ b/src/less/gigs.less
@@ -14,6 +14,10 @@
 .gigs-content {
   padding:0 30px 0 30px;
   .gig-info {
+
+    .facebook-link{margin-bottom:15px;}
+    .map-link{margin-top:15px;}
+
     padding: 30px 0 30px 0;
 
     .buy-ticket-link{
