--- a/src/less/main.less
+++ b/src/less/main.less
@@ -17,6 +17,10 @@ body{
   overflow-x:hidden;
 }
 
+.block{
+  display:block;
+}
+
 .text-center{
   text-align:center;
 }
